fixed bug with front page bottom section not showing up

--- a/frontend/src/components/forest/forest.css
+++ b/frontend/src/components/forest/forest.css
@@ -42,16 +42,13 @@ html {
   margin-top: 25px;
 }
 
-.bottom-ad {
+.bottom-section {
+  display:flex;
   height: 200px;
-  /* position: absolute; */
-  /* width: 600px; */
-  /* margin-left: 300px; */
   color: #222726;
   font-family: cursive;
   font-size: 20px;
   margin-top: 20px;
-  display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
@@ -62,6 +59,7 @@ html {
   font-size: 33px;
   /* display: flex; */
   /* margin-left: 550px; */
+  text-align: center;
   width: 600px;
 }
 
